css/style.css
/*---------------------NavBar------------------------------*/

.navbar-container {
    position: absolute;
    top: 0;
    left: 0;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
}

.navbar-bg {
    background-color: rgba(0, 0, 0, 0.3)
}

.nav-item a {
    text-decoration: none;
    color: #f2f2f2;
    font-size: 20px;
}

.nav-toggler-button {
    color: #f2f2f2;
    font-size: 27px;
}

/*---------------------/NavBar-----------------------------*/

/*------------------------Landing Page---------------------------------*/

.landing-page-background {
    background: url(/assets/images/landing-bg.png) no-repeat center center;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    position: relative;

}

.background-alpha-04 {
    background: rgba(0, 0, 0, 0.4) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    padding: 0px;
    position: relative;


}

.logo {
    height: 50px;
    width: auto;
    padding-left: 10px;
    padding-top: 10px;
}

.headers-wrapper {
    color: #f2f2f2;
    border: solid yellow 2px;
    height: 100%;
    margin: 0;

}



.continue-wrapper {
    position: absolute;
    bottom: 0;
    text-align: center;
    padding-left: 0;
    padding-right: 0;
    z-index: 1;
    width: 100%;
    color: #f2f2f2;
    border: solid red 3px;
    font-size: 20px;
}

.continue-wrapper p {
    margin: 0;
}



.continue-wrapper p i {
    padding-left: 10px;
    padding-right: 10px;
}



/*------------------------/Landing Page--------------------------------*/

/*------------------------Portfolio--------------------------------*/

.portfolio-bg {
    background: url(/assets/images/portfolio-bg.png) no-repeat center center fixed;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    padding: 0;
}

.background-alpha-02 {
    background-color: rgba(0, 0, 0, 0.2);
    height: 100%;
    width: 100%;
    position: relative;
}

.imglist {
    text-align: center;
    border: solid green 2px;
}

.imglist a img {
    margin: 45px 30px;
    border: solid 1px black;
}

/*------------------------/Portfolio--------------------------------*/

/*------------------------Bio---------------------------------*/

.bio-container {

    background-image: linear-gradient(to bottom right, #a8253a, #dd929e);

}

#tj-bio-pic {
    height: 100%;
    width: 100%;
    position: relative;
    margin-bottom: 15px;
}

/*------------------------/Bio---------------------------------*/

/*-----------------------------FAQ-----------------------*/

.faq-container {
    text-align: center;
    margin: 0;
    padding: 0;
}



.faq-bg {
    background-color: #f9f7f7;
    margin: 0;
}

.question-container {
    margin-top: 20px;
    margin-bottom: 25px;
    padding: 0;
}


.faq-question {
    text-align: left;
    background-color: #e8e6e6;
    color: Black;
    border-width: 0px 0px 0px 4px;
    border-style: solid;
    border-color: #e82c2c;
    margin: 0;
    font-weight: 400;
}

.faq-answer {
    text-align: left;
    border-width: 0px 0px 0px 4px;
    border-style: solid;
    border-color: #bcbcbc;
    font-size: 18px;
    font-weight: 300;
    margin: 0;
}


.span-question {
    color: #e82c2c;
    font-size: 40px;
    padding-right: 16px;
    padding-left: 5px;
    font-weight: 300
}

.span-answer {
    color: #bcbcbc;
    font-size: 40px;
    padding-right: 16px;
    padding-left: 5px;

}


.block-divider-faq {
    width: 100%;
    height: 3px;
    border: 0;
    background-color: #898989;
    text-align: center;
    margin-right: 0px;
    padding-right: 0px;
    padding-left: 0px;
}


/*-----------------------------/FAQ----------------------*/

/*-----------------------------Contact-------------------*/

.contact-bg{
    background: url(/assets/images/contact-gb.png) no-repeat center center fixed ;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    height: 100vh;
    position: relative;
}

#form-style{
    margin-top: 160px;
}

.form-element-style{
    background-color: #e8e6e6;
        border: solid #8d5510 2px;
}

#exampleFormControlFile1 {
    padding:0
}

input{
    z-index: 3;
}
/*-----------------------------Misc----------------------*/

.header{
    padding-top: 15px;
    text-align:center;
    }

.header-white{
    color:#f9f7f7;
}

.header-black{
    color: #303030;
}
.float-right {
    float: right;
}

.float-left {
    float: left;
}



.row {
    margin: 0;
    padding: 0;
}

